--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios-cookiejar-support": "^4.0.7",
     "csv-writer": "^1.6.0",
     "generate-password": "^1.7.0",
+    "https-proxy-agent": "^7.0.1",
     "imap": "^0.8.19",
     "mailparser": "^3.6.5",
     "readline-sync": "^1.4.10",
